--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App MECH CADETS</title>
+    <title>Weather App </title>
+    <p> Lab - MECH CADETS</p>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
