--- a/flask-app/templates/index.html
+++ b/flask-app/templates/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
-        <p> Lab - MECH CADETS</p>
+        <h1>Weather App - MECH CADETS </h1>
         <form method="POST">
             <input type="text" name="city" placeholder="Enter city name" required>
             <button type="submit">Get Weather</button>
